add Loader.java 20%

--- a/src/main/resources/static/assets/libs/jquery-minicolors/index.html
+++ b/src/main/resources/static/assets/libs/jquery-minicolors/index.html
@@ -370,7 +370,7 @@
         </div>
       </div>
 
-      <!-- API -->
+      <!-- Api -->
       <h2 id="api">API</h2>
 
       <!-- Instantiation -->
